--- a/lang/es.json
+++ b/lang/es.json
@@ -10,48 +10,164 @@
 "[LEFT]":"",
 "[UP]":"",
 "[DOWN]":"",
-"Enabled":"Habilitado",
-"Disabled":"Deshabilitado",
-"Japan":"Japón",
-"North America":"Norte América",
-"Europe":"Europa",
-"Europe/Australia":"Europa/Australia",
-"South Korea":"Corea del Sur",
-"Unknown":"Desconocido",
-"Failed to %ls %ls!":"No se pudo %ls %ls!",
-"mount":"montar",
+"Enabled":"habilitado",
+"Disabled":"deshabilitado",
+"Japan":"japón",
+"North America":"norte américa",
+"Europe":"europa",
+"Australia":"australia",
+"Europe/Australia":"europa/australia",
+"China":"china",
+"South Korea":"corea del Sur",
+"Taiwan":"taiwan",
+"Unknown":"desconocido",
+"Failed to %ls %ls!":"no se pudo %ls %ls!",
+"mount":montar",
 "load":"cargar",
 "file system":"sistema de archivos",
-"Press %ls to %ls.":"Presione %ls, para %ls.",
+"Press %ls to %ls.":"presione %ls, para %ls.",
 "any button":"cualquier botón",
 "continue":"continuar",
 "reboot":"reiniciar",
 "cancel":"cancelar",
-"Completed!":"¡Terminado!",
-"Canceled!":"¡Cancelado!",
-"This file with a valid key must exist in the SD card root in order to boot rxMode on New 3DS.":"Para poder entrar en modo RX en N3DS este archivo debe existir en la tarjeta SD.",
-"This file with a valid key must exist in the SD card root in order to decrypt newer titles on firmware version below 7.0.0 and to use newer gamecard saves on firmware below 6.0.0.":"Para poder decriptar nuevos titulos en versiones anteriores a 7.0.0 y poder usar saves nuevos en versiones anteriores a 6.0.0 este archivo debe existir en la raíz de la tarjeta SD .",
-"Generating %ls XORpad":"Generando %ls XORpad",
-"Dumping %ls":"Extrayendo %ls",
-"Injecting %ls":"Inyectando %ls",
-"Copying %ls to %ls":"Copiando %ls a %ls",
-"Dumping %ls %ls partition":" Extrayendo %ls %ls partición",
-"Injecting %ls %ls partition":"Inyectando %ls %ls partición",
-"Copying %ls partition from %ls to %ls":"Copiando %ls partición de %ls a %ls",
+"Completed!":"¡proceso completado!",
+"Canceled!":"¡proceso cancelado!",
+"This file with a valid key must exist in the SD card root in order to boot rxMode on New 3DS.":"Para poder iniciar en modo rx en New3DS este archivo con una clave válida debe existir en la raíz de la tarjeta SD.",
+"This file with a valid key must exist in the SD card root in order to decrypt newer titles on firmware version below 7.0.0 and to use newer gamecard saves on firmware below 6.0.0.":"Para poder desencriptar nuevos títulos en firwares menores a 7.0.0 y para poder utilizar nuevos cartuchos con nuevos juegos con nueva encriptación en sus saves en firwares memores a 6.0.0 este archivo con una clave válida debe existir en la raíz de la tarjeta SD.",
+"Generating %ls XORpad":"generando %ls XORpad",
+"Dumping %ls":"extrayendo %ls",
+"Injecting %ls": inyectando %ls",
+"Copying %ls to %ls":"copiando %ls a %ls",
+"Dumping %ls %ls partition":"extrayendo partición %ls %ls",
+"Injecting %ls %ls partition":"Injectando partición %ls %ls",
+"Copying %ls partition from %ls to %ls":"copiando partición %ls de %ls a %ls",
 
-"Boot":"Iniciar",
+"Boot":"iniciar",
+"Boot options.":"opciones de inicio.",
+"Apply patches and reboot the console into rxMode on EmuNAND, if present.":"Aplicar parches al sistema e inciar rxtools en EmuNAND ,si está esta presente.",
+"Apply patches and reboot the console into rxMode on SysNAND.":"aplicar parches al sistema e incia rxtools en SysNAND.",
+"Patches signature checks and load in SysNAND with GBA and DSi support.":"Aplicar parches al sistema e incia rxtools en SysNAND con soporte para Dsiware y juegos de GBA.",
 "Reboot":"Reiniciar",
-"Shutdown":"Apagar",
-"Decrypt":"Decriptar",
-"Generate XORpads":"Generar XORpads",
+"Reboot the console.":"reinicia la consola.",
+"Shutdown":"Salir de rxtools",
+"Turn off the console.":"apagar la consola.",
+"Decrypt":"desencriptar",
+"Decryption options.":"opciones de cifrado.",
+"Generate XORpads":"generar XORpads",
+"Generate XORpads for titles and NAND partitions.":"Generar XORpads para titulos y particiones NAND.",
+"Generate XORpads needed to decrypt and encrypt 3DS titles from SDinfo.bin.":"generar XORpads necesarios para desencriptar y encriptar titulos de 3ds desde SDinfo.bin.",
+"Generate XORpads needed to decrypt and encrypt 3DS titles from ncchinfo.bin.":"Generar XORpads necesarios para desencriptar y encriptar titulos de 3ds desde ncchinfo.bin.",
+"Generate XORpad of the TWL (DSi) partition.":"Generar XORpad de la partición TWL (DSi).",
+"Generate XORpad of the TWL (DSi) FAT16 partition (TWL logical partition 0).":"Generar XORpad de la partición TWL (DSi) FAT16 (partición lógica de TWL 0).",
+"Generate XORpad of the TWL (DSi) FAT12 photo partition (TWL logical partition 1).":"Generar XORpad de la particón TWL (DSi) FAT12 ,partición de fotos (Partición lógica de TWL 1).",
+"Generate XORpad of the AGB (GBA) savegame partition.":"Generar XORpad de la partición AGB (GBA).",
+"Generate XORpad of the first firmware partition.":"generar XORpad de la primera partición del firmware.",
+"Generate XORpad of the second firmware partition.":"generar XORpad de la segunda partición del firmware.",
+"Generate XORpad of the CTR partition.":"generar XORpad de la partición CTR.",
+"Generate XORpad of the CTR (3DS) FAT 16 partition (CTR logical partition 0).":"Generar XORpad de la partición CTR (3DS) FAT16 (partición lógica de CTR 0) .",
 "Dump":"Extraer",
-"Image":"Imagen",
+"Dumping options.":"Opciones de extracción.",
+"Dump NAND image, separate partitions or files from the SysNAND.":"Extraer imagen NAND, desde particiones separadas o desde la SysNAND.",
+"Dump NAND image, separate partitions or files from the first EmuNAND.":"Extraer imagen NAND, particiones separadas o archivos desde la primera EmuNAND.",
+"Dump NAND image, separate partitions or files from the second EmuNAND.":"Extraer imagen NAND desde particiones separadas o desde archivos de la segunda emunand.",
+"Dump NAND image, separate partitions or files from the third EmuNAND.":"Extraer imagen NAND, particiones separadas o archivos desde la tercera EmuNAND.",
+"Image":"imagen",
+"Backup NAND raw image to file.":"Crear un backup de la imagen raw NAND a al archivo.",
+"Partitions":"particiones",
+"Dump decrypted NAND partitions to file.":"Extraer particiones NAND decriptadas al archivo.",
+"Dump decrypted TWL (DSi) partition to file.":"Extraer la partición TWL (DSi) desencriptada al archivo.",
+"Dump decrypted TWL (DSi) FAT16 partition (TWL logical partition 0) to file.":"Extraer la partición TWL (DSi) FAT16 (partición lógica de TWL 0) desencriptada al archivo.",
+"Dump decrypted TWL (DSi) FAT12 photo partition (TWL logical partition 1) to file.":"Extraer la partición TWL (DSi) FAT12, partición de fotos (partición lógica de TWL 1) desencriptada al archivo.",
+"Dump decrypted AGB (GBA) savegame partition to file.":"Extraer la partición AGB (GBA) desencriptada al archivo.",
+"Dump decrypted first firmware partition to file.":"Extraer la primera partición de firmware desencriptada.",
+"Dump decrypted second firmware partition to file.":"Extraer la segunda partición de firmware desencriptada al archivo .",
+"Dump decrypted CTR partition to file.":"Extraer la partición CTR desencriptada al archivo.",
+"Dump decrypted CTR (3DS) FAT 16 partition (CTR logical partition 0) to file.":"Extraer la partición CTR (3DS) FAT16 (partición lógica de CTR 0) desencriptada al archivo.",
 "Files":"Archivos",
-"Partitions":"Particiones",
+"Dump files from the CTRNAND FAT16 partition.":"Extraer archivos desde la partición CTRNAND FAT16.",
 "Inject":"Inyectar",
-"Copy":"Copiar",
+"Injection options.":"Opciones de Inyección.",
+"Inject NAND image, separate partitions or files to the SysNAND.":"Inyectar imagen NAND, particiones separadas u otros archivos a la SysNAND.",
+"Inject NAND image, separate partitions or files to the first EmuNAND.":"Inyectar una imagen NAND, particiones separadas u otros archivos a la primera EmuNAND.",
+"Inject NAND image, separate partitions or files to the second EmuNAND.":"Inyectar una imagen NAND, particiones separadas u otros archivos a la segunda EmuNAND.",
+"Inject NAND image, separate partitions or files to the third EmuNAND.":"Inyectar una imagen NAND, particiones separadas u otros archivos a la tercera EmuNAND.",
+"Restore NAND from raw image file.":"Restaurar la NAND desde un archivo de imagen raw.",
+"Inject unencrypted NAND partitions from file.":"inyectar una partición NAND sin encriptación desde un archivo.",
+"Inject unencrypted TWL (DSi) partition from file.":"inyectar una partición TWL (DSi) sin encriptación desde un archivo.",
+"Inject unencrypted TWL (DSi) FAT16 partition (TWL logical partition 0) from file.":"Inyectar una partición TWL (DSi) FAT16 (partición lógica 0) sin encriptación desde un archivo.",
+"Inject unencrypted TWL (DSi) FAT12 photo partition (TWL logical partition 1) from file.":"inyectar una partición TWL (DSi) FAT12, partición de fotos (partición lógica 1) sin encriptación desde un archivo.",
+"Inject unencrypted AGB (GBA) savegame partition from file.":"inyectar una partición AGB (GBA) de partidas sin encriptación desde un archivo.",
+"Inject unencrypted first firmware partition from file.":"inyectar una primera partición de firmware sin encriptación desde un archivo.",
+"Inject unencrypted second firmware partition from file.":"Inyectar una segunda partición de firmware sin encriptación .",
+"Inject unencrypted CTR partition from file.":"Inyectar una partición CTR sin encripatación desde un archivo.",
+"Inject unencrypted CTR (3DS) FAT 16 partition (CTR logical partition 0) from file.":"Inyectar una partición CTR (3DS) FAT16 (partición CTR lógica 0) desencriptada desde un archivo.",
+"Inject files to the CTRNAND FAT16 partition.":"inyectar archivos a CTRNAND FAT16.",
+"Copy":"copiar",
+"Copy options.":"opciones de copiado.",
+"SysNAND to EmuNAND":"de SysNAND a EmuNAND",
+"SysNAND to EmuNAND1":"de SysNAND a EmuNAND1",
+"SysNAND to EmuNAND2":"de SysNAND a EmuNAND2",
+"EmuNAND to SysNAND":"de EmuNAND a SysNAND",
+"EmuNAND to EmuNAND1":"de EmuNAND a EmuNAND1",
+"EmuNAND to EmuNAND2":"de EmuNAND a EmuNAND2",
+"EmuNAND1 to SysNAND":"de EmuNAND1 a SysNAND",
+"EmuNAND1 to EmuNAND":"de EmuNAND1 a EmuNAND",
+"EmuNAND1 to EmuNAND2":"de EmuNAND1 a EmuNAND2",
+"EmuNAND2 to SysNAND":"de EmuNAND2 a SysNAND",
+"EmuNAND2 to EmuNAND":"de EmuNAND2 a EmuNAND",
+"EmuNAND2 to EmuNAND1":"de EmuNAND2 a EmuNAND1",
+"Copy NAND image, separate partitions or files from SysNAND to first EmuNAND.":"Copiar una imagen NAND, particiones separadas u otros archivos de la SysNAND a la primera EmuNAND.",
+"Copy NAND image, separate partitions or files from SysNAND to second EmuNAND.":"Copiar una imagen NAND, particiones separadas u otros archivos de la SysNAND a la segunda EmuNAND .",
+"Copy NAND image, separate partitions or files from SysNAND to third EmuNAND.":"Copiar una imagen NAND, particiones separadas u otros archivos de la SysNAND a la tercera EmuNAND.",
+"Copy NAND image, separate partitions or files from first EmuNAND to SysNAND.":"Copiar una imagen NAND, particiones separadas u otros archivos de la primera EmuNAND a la SysNAND.",
+"Copy NAND image, separate partitions or files from first EmuNAND to second EmuNAND.":"Copiar una imagen NAND, particiones separadas u otros archivos de la primera EmuNAND a la segunda.",
+"Copy NAND image, separate partitions or files from first EmuNAND to third EmuNAND.":"Copiar una imagen NAND, particiones separadas u otros archivos de la primera EmuNAND a la tercera.",
+"Copy NAND image, separate partitions or files from second EmuNAND to SysNAND.":"Copiar una imagen NAND, particiones u otros archivos de la segunda EmuNAND a la SysNAND.",
+"Copy NAND image, separate partitions or files from second EmuNAND to first EmuNAND.":"Copiar una imagen NAND, particiones separadas u otros archivos de la segunda EmuNAND a la primera.",
+"Copy NAND image, separate partitions or files from second EmuNAND to third EmuNAND.":"Copiar una imagen NAND, particiones separadss u otros archivos de la segunda EmuNAND a la tercera.",
+"Copy NAND image, separate partitions or files from third EmuNAND to SysNAND.":"Copiar una imagen NAND, particiones separadas u otros archivos de la tercera EmuNAND a la SysNAND.",
+"Copy NAND image, separate partitions or files from third EmuNAND to first EmuNAND.":"Copiar una imagen NAND, particiones separadas u otros archivos de la tercera EmuNAND a la primera.",
+"Copy NAND image, separate partitions or files from third EmuNAND to second EmuNAND.":"Copiar una imagen NAND, particiones separadas u otros archivos de la primera EmuNAND a la segunda.",
+"Copy full NAND image.":"Copiar una imagen completa de la NAND.",
+"Copy partitions.":"Copiar particiones.",
+"Copy TWL (DSi) partition.":"Copiar la partición TWL (DSi).",
+"Copy TWL (DSi) FAT16 partition (TWL logical partition 0).":"Copiar la partición TWL (DSi) FAT16 (Partición lógica de TWL 0).",
+"Copy TWL (DSi) FAT12 photo partition (TWL logical partition 1).":"Copiar la partición TWL (DSi) FAT12 partición de fotos (Partición lógica de TWL 0).",
+"Copy AGB (GBA) savegame partition.":"Copiar la partición de guardado de partidas AGB (GBA).",
+"Copy first firmware partition.":"Copiar la primera partición del firmware.",
+"Copy second firmware partition.":"Copiar la segunda partición del firmware.",
+"Copy CTR partition.":"Copiar la partición CTR.",
+"Copy CTR (3DS) FAT 16 partition (CTR logical partition 0).":"Copiar la partición CTR (3DS) FAT16 (Partición lógica 0).",
+"Copy files between CTRNAND FAT16 partitions.":"Copiar archivos entre las particiones CTRNAND FAT16.",
 "Settings":"Ajustes",
+"Change settings.":"Cambiar los ajustes.",
+"Default boot":"Inicio normal",
+"Force rxTools UI":"Forzar la aparición de la IU",
+"Force rxMode EmuNAND":"Forzar inicio en EmuNAND",
+"Force rxMode SysNAND":"Forzar inicio en SysNAND",
+"Force Pasta mode":"Forzar inicio en modo pasta",
+"Theme":"Tema",
+"Show AGB_FIRM BIOS":"mostrar los BIOS de AGB_FIRM",
+"Language":"lenguage",
+"SysNAND write protection":"protección contra escritura en SysNAND",
 "Diagnostics":"Diagnosticos",
+"Check console setup.":"revisar los ajustes de la consola.",
+"Check rxTools build properties.":"propiedades de esta build.",
+"Build version":"versión",
+"Keys":"claves",
+"Check various key files presence validity.":"Revisar la valides de varios archivos clave.",
+"Required for 6.x save game encryption on console firmware version below 7.0":"Se requiere para saves con encriptación 6.x en consolas con firmware menor a 7.0",
+"Required for New 3DS firmware 9.5":"Se requiere para sistemas N3DS en firmware 9.5",
+"Required for New 3DS firmware 9.6":"Se requiere para sistemas N3DS en firmware 9.6",
+"Check SysNAND firmware and system titles versions.":"revisar el firmware de la SysNAND y la versión de sus títulos de sistema.",
+"Check first EmuNAND firmware and system titles versions.":"Revisar la primera EmuNAND y la versión de sus títulos de sistema.",
+"Check second EmuNAND firmware and system titles versions.":"Revisar la segunda EmuNAND y la versión de sus títulos de sistema.",
+"Check third EmuNAND firmware and system titles versions.":"revisar la tercera EmuNAND y la versión de sus títulos de sistema.",
+"NATIVE_FIRM version":"versión del NATIVE_FIRM",
+"TWL_FIRM version":"Versión del TWL_FIRM",
+"AGB_FIRM version":"versión del AGB_FIRM",
+"MSET version":"Versión del MSET",
+"H&S version":"Versión de H&S"
 
 "obsolete values below":"will be removed",
 "BACKING_UP":"Respaldando %ls...\n",
